--- a/templates/form.html
+++ b/templates/form.html
@@ -12,7 +12,7 @@
            *
           </span>
           <div class="field-html ">
-           <input field_id="1333140" class='red-input'  id="id_member_field_first_name" name="member_field_first_name" type="text"  placeholder="¡First Name!*">
+           <input field_id="1333140" class='red-input'  id="id_member_field_first_name" name="member_field_first_name" type="text"  placeholder="First Name*">
           </div>
          </div>
          <div class="field">
@@ -23,7 +23,7 @@
            *
           </span>
           <div class="field-html ">
-           <input field_id="1334164" class='red-input'  id="id_member_field_last_name" name="member_field_last_name" type="text" placeholder="¡Last Name!*">
+           <input field_id="1334164" class='red-input'  id="id_member_field_last_name" name="member_field_last_name" type="text" placeholder="Last Name*">
           </div>
          </div>
        </div>
@@ -36,7 +36,7 @@
          *
         </span>
         <div class="field-html ">
-         <input id="id_email" class='red-input' name="email" type="email"  placeholder="¡Your Email!*">
+         <input id="id_email" class='red-input' name="email" type="email"  placeholder="Your Email*">
         </div>
        </div>
 
@@ -46,7 +46,7 @@
            Postal code
           </b>
           <div class="field-html ">
-           <input field_id="1340308" id="id_member_field_postal_code" name="member_field_postal_code" class='red-input' placeholder="¡Zip Code!" type="text">
+           <input field_id="1340308" id="id_member_field_postal_code" name="member_field_postal_code" class='red-input' placeholder="Zip Code" type="text">
           </div>
          </div>
 
@@ -55,7 +55,7 @@
            Birthday
           </b>
           <div class="field-html select-fields">
-            <span class='birthday-label red-input'>¡Birthday!</span>
+            <span class='birthday-label red-input'>Birthday</span>
            <select field_id="1341332" class='red-input' id="id_member_field_birthday_month" name="member_field_birthday_month">
             <option value="0">
              Mes
