--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -94,7 +94,7 @@
         <article class="kiosk-box">
           <a href="{{bar.url}}">
             <div class="kiosk-box-img">
-              <img src="{{bar.fields.thumbnail_left.url}}" alt="{{bar.fields.thumbnail_left.alt_text}}">
+              <img src="{{bar.fields.global_icon.url}}" alt="{{bar.fields.global_icon.alt_text}}">
               <div class="kiosk-bar-hover-img">
                 <img src="{{bar.fields.gallery[0].image_url}}" alt="">
                 <div class="img-fade"></div>
