home happenings hide

--- a/templates/index.html
+++ b/templates/index.html
@@ -267,7 +267,7 @@
   </div>
 </section>
 
-<section class="home-happenings">
+<!-- <section class="home-happenings">
   <div class="content-margins">
     <div class="section-title-container">
       <img src="{{ static('img/yellow_triangle.png')}}" alt="">
@@ -294,7 +294,7 @@
       <a href="{{pages.by_slug['happenings'].url}}" class='more-info'>View All</a>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="home-shop">
   <div class="content-margins">
