map update + gift card link

--- a/templates/shop.html
+++ b/templates/shop.html
@@ -91,7 +91,7 @@
       <div class="gift-card-info">
         {{current.fields['gift-card'].content_box}}
 
-        <a href="" class="more-info">Shop Now</a>
+        <a href="{{current.fields['gift-card'].link}}" class="more-info" target="_blank">Shop Now</a>
       </div>
     </div>
   </div>
