--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -16,7 +16,7 @@
 
 <section class="mls-mercado-map-img">
   <div class="content-margins">
-    <a href="{{static('img/mls-map.png')}}" target="_blank"><img src="{{static('img/mls-map.png')}}" alt="Little Spain Map"></a>
+    <a href="{{static('img/Map.jpg')}}" target="_blank"><img src="{{static('img/Map.jpg')}}" alt="Little Spain Map"></a>
   </div>
 </section>
 
