seo title, mercado anchor tags

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -74,7 +74,9 @@
       <address class="site-info">
         10 Hudson Yards New York, NY  10001
         <br>
-        <a href="mailto:hola@littlespain.com">hola@littlespain.com</a>        
+        <a href="mailto:hola@littlespain.com">hola@littlespain.com</a>
+        <br>
+        <a href="tel:6464951242">646-495-1242</a>        
       </address><!-- .site-info -->
       <nav id="footer-navigation" class="menu" aria-label="Footer Navigation">
         <ul class="footer-menu">
