map anchor on mercado

--- a/templates/header.html
+++ b/templates/header.html
@@ -195,7 +195,7 @@
                   <a href="/bars/#bars">Bars</a>
                 </li>
                 <li class="nav-item child">
-                  <a href="/kiosks">Map</a>
+                  <a href="/the-mercado/#map">Map</a>
                 </li>
               </ul>
             </li>
@@ -259,13 +259,13 @@
                 </li>
 
                 <li class="nav-item child">
-                  <a href="/kiosks">Kiosks</a>
+                  <a href="/kiosks/#kiosks">Kiosks</a>
                 </li>
                 <li class="nav-item child">
-                  <a href="/bars">Bars</a>
+                  <a href="/bars/#bars">Bars</a>
                 </li>
                 <li class="nav-item child">
-                  <a href="/kiosks">Map</a>
+                  <a href="/the-mercado/#map">Map</a>
                 </li>
               </ul>
             </li>
