--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -14,7 +14,7 @@
   </div>
 </section>
 
-<section class="mls-mercado-map-img">
+<section class="mls-mercado-map-img" id='map'>
   <div class="content-margins">
     <a href="{{static('img/Map.jpg')}}" target="_blank"><img src="{{static('img/Map.jpg')}}" alt="Little Spain Map"></a>
   </div>
