--- a/templates/header.html
+++ b/templates/header.html
@@ -195,7 +195,7 @@
                   <a href="/bars/#bars">Bars</a>
                 </li>
                 <li class="nav-item child">
-                  <a href="/the-mercado/#map">Map</a>
+                  <a href="/the-mercado/#mercado-map">Map</a>
                 </li>
               </ul>
             </li>
@@ -265,7 +265,7 @@
                   <a href="/bars/#bars">Bars</a>
                 </li>
                 <li class="nav-item child">
-                  <a href="/the-mercado/#map">Map</a>
+                  <a href="/the-mercado/#mercado-map">Map</a>
                 </li>
               </ul>
             </li>
