--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,3 +1,25 @@
+.home-hero{
+  #home-video-img, #home-video-img-mobile{
+    width: 100vw;
+    height: auto;
+  }
+  @media (max-width: 767px){
+    #home-video-img{
+      display: none;
+    }
+    #home-video-img-mobile{
+      display: block;
+    }
+  }
+  @media (min-width: 768px){
+    #home-video-img{
+      display: block;
+    }
+    #home-video-img-mobile{
+      display: none;
+    }
+  }
+}
 .home-hero-image{
   margin-top: -2px;
 }
