--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,28 @@
 
 <!-- index.html -->
 
+
+
 <section class="home-hero">
   <!-- <img src="{{pages.by_slug.home.fields['home-hero-image'].image.url}}" alt="{{pages.by_slug.home.fields['home-hero-image'].image.alt}}"> -->
 
-  <img src="{{static('img/home-bg.gif')}}" alt="Home Image" class='home-hero-image'>
-  <img src="{{static('img/home-bg-mobile.gif')}}" alt="Home Image" class="home-hero-mobile">
+
+  <video id="home-video-img" loop muted autoplay playsinline>
+
+      <source src="{{static('img/home-bg.mp4')}}" type="video/mp4">
+
+  </video>
+
+  <video id="home-video-img-mobile" loop muted autoplay playsinline>
+
+      <source src="{{static('img/home-bg-mobile.mp4')}}" type="video/mp4">
+
+  </video>
+
+
+
+  <!-- <img src="{{static('img/home-bg.gif')}}" alt="Home Image" class='home-hero-image'>
+  <img src="{{static('img/home-bg-mobile.gif')}}" alt="Home Image" class="home-hero-mobile"> -->
 </section>
 
 
