--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -202,3 +202,169 @@
   padding-top: 125px;
   margin-top: -125px;
 }
+
+.mercado-map-box{
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.mercado-map-cont{
+  position: relative;
+  width: 100%;
+  padding-top: 50px;
+  overflow-x: scroll;
+  overflow-y: visible;
+  min-width: 1024px;
+  svg{
+    min-width: 1024px;
+  }
+}
+
+.mercado-map-hover-box{
+  opacity: 0;
+  transition: ease 300ms all;
+  position: absolute;
+  border: 2px solid $toro_red;
+  // height: 30px;
+  max-width: 155px;
+  background-color: white;
+  z-index: 2;
+  display: flex;
+  padding: 10px;
+  // justify-content: space-between;
+  align-items: center;
+  pointer-events: none;
+  img{
+    height:auto;
+    width: 50px;
+    border: 1px solid $toro_red;
+  }
+  &.rest{
+    img{
+      border: 0px;
+    }
+  }
+  span{
+    // width: 45%;
+    font-size: 12px;
+    padding-left: 10px;
+  }
+  &.active{
+    opacity: 1;
+  }
+  &:before{
+    content: '';
+    border-bottom: 2px solid $toro_red;
+    border-right: 2px solid $toro_red;
+    height: 10px;
+    width: 10px;
+    pointer-events: none;
+    transform: rotate(45deg);
+    position: absolute;
+    top: calc(100% - 5px);
+    z-index: 2;
+    background-color: white;
+    border-radius: 2px;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+}
+
+.mercado-map-more-info-boxes{
+  position: absolute;
+  right: 50px;
+  top: 90px;
+  opacity: 0;
+  transition: ease 300ms all;
+  pointer-events: none;
+  &.active{
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .map-more-info-box{
+    display: none;
+    &:first-child{
+      // display: block;
+    }
+    width: 350px;
+    border: 2px solid $toro_red;
+  }
+  .map-more-info-banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    border-bottom: 2px solid $toro_red;
+
+    h6{
+      font-size: 30px;
+      text-transform: uppercase;
+      color: $toro_red;
+      font-family: $knockout-bantam;
+    }
+
+    img{
+      width: 50px;
+      height: 50px;
+      border: 1px solid $toro_red;
+
+    }
+    .map-more-info-banner-right{
+      width: 50px;
+      text-align: center;
+      color: $mid_grey;
+      border: 1px solid $mid_grey;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+      text-transform: uppercase;
+      font-family: $knockout-bantam;
+      font-size: 12px;
+    }
+  }
+
+  .map-more-info-box-desc{
+    // padding-bottom: 30px;
+    display: flex;
+    // align-items: flex-start;
+    .map-more-info-img{
+      width: 35%;
+      min-width: 35%;
+      padding: 5px;
+    }
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+
+    }
+    .map-more-info-content{
+      border-left: 2px solid $toro_red;
+      padding: 10px;
+      padding-bottom: 20px;
+      position: relative;
+      font-size: 18px;
+      a{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: 25px;
+        width: 25px;
+        background-color: $toro_red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        svg{
+          width: 15px;
+          min-width: unset;
+          path{
+            fill: white;
+          }
+        }
+      }
+    }
+  }
+}
