--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -21,21 +21,27 @@
 </section> -->
 
 <section  id='mercado-map'>
-  <div class="mercado-map-filter">
-    <h4>Filter By</h4>
-    <div class="map-filter-box">
-      <div class="selected-filter">Kiosks</div>
-      <div class="other-filters">
+  <div class="content-margins">
+    <div class="mercado-map-filter">
+      <h4>Filter By</h4>
+      <div class="map-filter-box filter-with-dropdown">
+        <div class="selected-filter" type='kiosks'>Kiosks</div>
+        <div class="map-filter-select">
+          <div class="map-filter-select-inner">
+            {% for cats in boxes.kiosks.categories %}
+              {% if cats.slug != 'uncategorized' %}
+              <a href='' class="filter-selection" type='{{cats.slug}}'>{{cats.name}}</a>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </div>
 
       </div>
-
-    </div>
-    <div class="map-filter-box">
-      <div class="selected-filter">Shop</div>
-    </div>
-    <div class="map-filter-box">
-      <div class="selected-filter">Bar</div>
-      <div class="other-filters">
+      <div class="map-filter-box">
+        <a href="" class="selected-filter" type='shop'>Shop</a>
+      </div>
+      <div class="map-filter-box">
+        <a href="" class="selected-filter" type='bar'>Bar</a>
 
       </div>
     </div>
@@ -49,111 +55,113 @@
           <span></span>
         </div>
         <div class="mercado-map-more-info-boxes">
+          <div class="bg-fade"></div>
+<div class="mercado-map-box-cont">
+  <a href="" class="mercado-map-more-info-close">×</a>
+  {% for restaurant in boxes.restaurant.all%}
+    <div class="map-more-info-box" id='map-more-info-{{restaurant.slug}}'>
+      <div class="map-more-info-banner">
+        <img src="{{static('img/restaurant-landing/Left.png')}}" alt="">
+        <h6>{{restaurant.name}}</h6>
+        <img src="{{static('img/restaurant-landing/Right.png')}}" alt="">
+      </div>
+      <div class="map-more-info-box-desc">
+        <div class="map-more-info-img">
+          <img src="{{restaurant.fields.gallery[0].image_url}}" alt="" class="">
+        </div>
+        <div class="map-more-info-content">
+          {{restaurant.fields.home_description}}
+          <a href="{{restaurant.url}}">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
+            <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
+              l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 
-          {% for restaurant in boxes.restaurant.all%}
-            <div class="map-more-info-box" id='map-more-info-{{restaurant.slug}}'>
-              <div class="map-more-info-banner">
-                <img src="{{static('img/restaurant-landing/Left.png')}}" alt="">
-                <h6>{{restaurant.name}}</h6>
-                <img src="{{static('img/restaurant-landing/Right.png')}}" alt="">
-              </div>
-              <div class="map-more-info-box-desc">
-                <div class="map-more-info-img">
-                  <img src="{{restaurant.fields.gallery[0].image_url}}" alt="" class="">
-                </div>
-                <div class="map-more-info-content">
-                  {{restaurant.fields.home_description}}
-                  <a href="{{restaurant.url}}">
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                       viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
-                    <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
-                      l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          {% endfor %}
+  {% for kiosk in boxes.kiosks.all %}
+    <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
+      <div class="map-more-info-banner">
+        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <h6>{{kiosk.name}}</h6>
+        <div class="map-more-info-banner-right">
+          {{kiosk.fields.hover_text}}
+        </div>
+      </div>
+      <div class="map-more-info-box-desc">
+        <div class="map-more-info-img">
+          <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
+        </div>
+        <div class="map-more-info-content">
+          {{kiosk.fields.short_description}}
+          <a href="{{kiosk.url}}">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
+            <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
+              l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 
-          {% for kiosk in boxes.kiosks.all %}
-            <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
-              <div class="map-more-info-banner">
-                <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
-                <h6>{{kiosk.name}}</h6>
-                <div class="map-more-info-banner-right">
-                  {{kiosk.fields.hover_text}}
-                </div>
-              </div>
-              <div class="map-more-info-box-desc">
-                <div class="map-more-info-img">
-                  <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
-                </div>
-                <div class="map-more-info-content">
-                  {{kiosk.fields.short_description}}
-                  <a href="{{kiosk.url}}">
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                       viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
-                    <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
-                      l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          {% endfor %}
-
-          {% for kiosk in boxes.bar.all %}
-            <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
-              <div class="map-more-info-banner">
-                <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
-                <h6>{{kiosk.name}}</h6>
-                <div class="map-more-info-banner-right">
-                  {{kiosk.fields.hover_text}}
-                </div>
-              </div>
-              <div class="map-more-info-box-desc">
-                <div class="map-more-info-img">
-                  <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
-                </div>
-                <div class="map-more-info-content">
-                  {{kiosk.fields.short_description}}
-                  <a href="{{kiosk.url}}">
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                       viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
-                    <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
-                      l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          {% endfor %}
-          {% for kiosk in boxes.shop.all %}
-            <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
-              <div class="map-more-info-banner">
-                <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
-                <h6>{{kiosk.name}}</h6>
-                <div class="map-more-info-banner-right">
-                  {{kiosk.fields.hover_text}}
-                </div>
-              </div>
-              <div class="map-more-info-box-desc">
-                <div class="map-more-info-img">
-                  <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
-                </div>
-                <div class="map-more-info-content">
-                  {{kiosk.fields.short_description}}
-                  <a href="{{kiosk.url}}">
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                       viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
-                    <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
-                      l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          {% endfor %}
+  {% for kiosk in boxes.bar.all %}
+    <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
+      <div class="map-more-info-banner">
+        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <h6>{{kiosk.name}}</h6>
+        <div class="map-more-info-banner-right">
+          {{kiosk.fields.hover_text}}
+        </div>
+      </div>
+      <div class="map-more-info-box-desc">
+        <div class="map-more-info-img">
+          <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
+        </div>
+        <div class="map-more-info-content">
+          {{kiosk.fields.short_description}}
+          <a href="{{kiosk.url}}">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
+            <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
+              l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+  {% for kiosk in boxes.shop.all %}
+    <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}'>
+      <div class="map-more-info-banner">
+        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <h6>{{kiosk.name}}</h6>
+        <div class="map-more-info-banner-right">
+          {{kiosk.fields.hover_text}}
+        </div>
+      </div>
+      <div class="map-more-info-box-desc">
+        <div class="map-more-info-img">
+          <img src="{{kiosk.fields.gallery[0].image_url}}" alt="" class="">
+        </div>
+        <div class="map-more-info-content">
+          {{kiosk.fields.short_description}}
+          <a href="{{kiosk.url}}">
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
+            <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
+              l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}</div>
 
 
         </div>
