--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -527,6 +527,9 @@
     }
     &.filter-with-dropdown{
       display: block;
+      .selected-filter{
+        display: block;
+      }
       @media(max-width: 600px){
         .map-filter-select{
           position: initial;
