new twitter img

--- a/templates/header.html
+++ b/templates/header.html
@@ -98,7 +98,7 @@
     <meta name="twitter:image" content="{{current.fields.SEO.image.url}}">
   {% else %}
     <meta property="og:image"              content="{{static('img/logo.png')}}" />
-    <meta name="twitter:image" content="{{account.logo}}">
+    <meta name="twitter:image" content="{{static('img/social-img.png')}}">
 
   {% endif %}
 
