--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -24,6 +24,9 @@
   <div class="content-margins">
     <div class="mercado-map-filter">
       <h4>Filter By</h4>
+      <div class="map-filter-box">
+        <a href="" class="selected-filter" type='restaurant'>Restaurants</a>
+      </div>
       <div class="map-filter-box filter-with-dropdown">
         <a href='' class="selected-filter" type='kiosks'>Kiosks</a>
         <div class="map-filter-select">
@@ -42,7 +45,6 @@
       </div>
       <div class="map-filter-box">
         <a href="" class="selected-filter" type='bar'>Bar</a>
-
       </div>
     </div>
   </div>
@@ -60,11 +62,9 @@
   <a href="" class="mercado-map-more-info-close">×</a>
 
   {% for restaurant in boxes.restaurant.all%}
-    <div class="map-more-info-box" id='map-more-info-{{restaurant.slug}}' tabindex="0">
+    <div class="map-more-info-box rest-more-info" id='map-more-info-{{restaurant.slug}}' tabindex="0">
       <div class="map-more-info-banner">
-        <img src="{{static('img/restaurant-landing/Left.png')}}" alt="">
-        <h6>{{restaurant.name}}</h6>
-        <img src="{{static('img/restaurant-landing/Right.png')}}" alt="">
+        <img src="{{restaurant.fields.banner_image.url}}" alt="{{restaurant.name}}">
       </div>
       <div class="map-more-info-box-desc">
         <div class="map-more-info-img">
@@ -87,7 +87,7 @@
   {% for kiosk in boxes.kiosks.all %}
     <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}' tabindex="0">
       <div class="map-more-info-banner">
-        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <img src="{{kiosk.fields.page_icon.url}}" alt="{{kiosk.fields.page_icon.alt}}">
         <h6>{{kiosk.name}}</h6>
         <div class="map-more-info-banner-right">
           {{kiosk.fields.hover_text}}
@@ -114,7 +114,7 @@
   {% for kiosk in boxes.bar.all %}
     <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}' tabindex="0">
       <div class="map-more-info-banner">
-        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <img src="{{kiosk.fields.page_icon.url}}" alt="{{kiosk.fields.page_icon.alt}}">
         <h6>{{kiosk.name}}</h6>
         <div class="map-more-info-banner-right">
           {{kiosk.fields.hover_text}}
@@ -140,7 +140,7 @@
   {% for kiosk in boxes.shop.all %}
     <div class="map-more-info-box" id='map-more-info-{{kiosk.slug}}' tabindex="0">
       <div class="map-more-info-banner">
-        <img src="{{kiosk.fields.global_icon.url}}" alt="{{kiosk.fields.global_icon.alt}}">
+        <img src="{{kiosk.fields.page_icon.url}}" alt="{{kiosk.fields.page_icon.alt}}">
         <h6>{{kiosk.name}}</h6>
         <div class="map-more-info-banner-right">
           {{kiosk.fields.hover_text}}
