hide map popup box on mobile

--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -366,7 +366,9 @@
     right: 0;
     margin: auto;
   }
-
+  @media (max-width: 767px){
+    display: none;
+  }
 }
 
 .mercado-map-more-info-boxes{
