--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -211,8 +211,9 @@
 }
 
 #mercado-map{
+  position: relative;
+
   @media(max-width: 767px){
-    position: relative;
   }
 }
 
@@ -221,17 +222,26 @@
   overflow-y: hidden;
 }
 
+.mercado-map-inner{
+    position: relative;
+    width: 1024px;
+    margin: auto;
+    @media (max-width: 767px){
+      position: initial;
+    }
+}
+
 .mercado-map-cont{
-  position: relative;
+  // position: relative;
   padding-top: 50px;
-  width: 1024px;
+  overflow: scroll;
   margin: auto;
   @media (max-width: 767px){
-    position: initial;
+    // position: initial;
   }
   svg{
-    // width: 1024px;
-    width: 100%;
+    width: 1024px;
+    // width: 100%;
     margin: auto;
     display: block;
   }
@@ -271,8 +281,8 @@
       }
     }
   }
-  svg[type="sweet"]{
-    .svg-stall-cont:not([type='sweet ']){
+  svg[type="kiosk"]{
+    .svg-stall-cont{
       text{
         pointer-events: none;
       }
@@ -282,7 +292,29 @@
 
       }
     }
-    .svg-stall-cont[type='sweet savory ']{
+    .svg-stall-cont[type='kiosk']{
+      text{
+        pointer-events: auto;
+      }
+      rect.st0,polygon.st0{
+        fill: #FDF16F;
+        pointer-events: auto;
+
+      }
+    }
+  }
+  svg[type="sweet"]{
+    .svg-stall-cont:not([cat='sweet ']){
+      text{
+        pointer-events: none;
+      }
+      rect.st0,polygon.st0{
+        fill: #fdf16f24;
+        pointer-events: none;
+
+      }
+    }
+    .svg-stall-cont[cat='sweet savory ']{
       rect.st0,polygon.st0{
         fill: #FDF16F;
         pointer-events: auto;
@@ -293,7 +325,7 @@
     }
   }
   svg[type="savory"]{
-    .svg-stall-cont:not([type='savory ']){
+    .svg-stall-cont:not([cat='savory ']){
       text{
         pointer-events: none;
       }
@@ -303,7 +335,7 @@
 
       }
     }
-    .svg-stall-cont[type='sweet savory ']{
+    .svg-stall-cont[cat='sweet savory ']{
       rect.st0,polygon.st0{
         fill: #FDF16F;
         pointer-events: auto;
@@ -374,10 +406,11 @@
 .mercado-map-more-info-boxes{
   position: absolute;
   right: 50px;
-  top: 90px;
+  top: 45px;
   opacity: 0;
-  transition: ease 300ms all;
+  transition: ease 300ms opacity;
   pointer-events: none;
+  display: flex;
   @media (max-width: 767px){
     width: 100%;
     height: calc(100% - 125px);
@@ -385,7 +418,7 @@
     left: 0;
     bottom: 0;
     top: auto;
-    display: flex;
+
     justify-content: center;
     align-items: center;
   }
@@ -405,6 +438,7 @@
   &.active{
     opacity: 1;
     pointer-events: auto;
+
     @media (max-width: 767px){
 
       .bg-fade{
@@ -535,7 +569,7 @@
   .map-filter-box{
     border: 2px solid $toro_red;
     flex-grow: 1;
-    margin-left: 25px;
+    margin-left: 1%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -575,11 +609,44 @@
       @media(max-width: 600px){
         position: initial;
       }
+      .filter-selection{
+        &.active{
+          color: white;
+          background-color: $toro_red;
+          position: relative;
+          @media(min-width: 600px){
+            padding-left: 40px;
+          }
+          &:before{
+            content: "×";
+            position: absolute;
+            height: 20px;
+            width: 20px;
+            background-color: white;
+            color: $toro_red;
+            left: 10px;
+            top: 0px;
+            bottom: 0;
+            margin: auto;
+            line-height: 18px;
+            cursor: pointer;
+          }
+        }
+      }
     }
 
     a{
       color: $toro_red;
     }
+
+    &.filter-with-dropdown{
+      .selected-filter{
+        &:before{
+          display: none;
+        }
+      }
+    }
+
     .selected-filter{
 
       cursor: pointer;
@@ -588,9 +655,31 @@
       height: 100%;
       width: 100%;
       text-align: center;
-      &:hover, &.active{
+      &:hover{
         color: white;
         background-color: $toro_red;
+      }
+      &.active{
+        color: white;
+        background-color: $toro_red;
+        position: relative;
+        @media(min-width: 600px){
+          padding-left: 40px;
+        }
+        &:before{
+          content: "×";
+          position: absolute;
+          height: 20px;
+          width: 20px;
+          background-color: white;
+          color: $toro_red;
+          left: 10px;
+          top: 0px;
+          bottom: 0;
+          margin: auto;
+          line-height: 18px;
+          cursor: pointer;
+        }
       }
     }
     .map-filter-select{
@@ -631,7 +720,7 @@
     position: absolute;
     right: 0;
     bottom: calc(100% + 5px);
-    font-size: 30px;
+    font-size: 40px;
     color: $toro_red;
     cursor: pointer;
     @media (max-width: 767px){
