map svg plaza font

--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -248,6 +248,9 @@
       .st3, &.st3{
         font-family: $knockout;
       }
+      .st5, &.st5{
+        font-family: $knockout-welter;
+      }
     }
   }
   svg[type="shop"]{
