--- a/templates/index.html
+++ b/templates/index.html
@@ -237,8 +237,8 @@
               <p>{{rest.fields.home_description}}</p>
               <div class="home-rest-links">
                 <a href="{{rest.url}}" class="more-info">Visit</a>
-                {% if reservation_link %}
-                  <a href="{{reservation_link}}" class='more-info'>Reserve</a>
+                {% if rest.fields.reservation_link %}
+                  <a href="{{rest.fields.reservation_link}}" class='more-info'>Reserve</a>
                 {% else %}
                   <a class='more-info coming-soon'>¡Coming soon!</a>
                 {% endif %}
