reservation link new window

--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@
               <div class="home-rest-links">
                 <a href="{{rest.url}}" class="more-info">Visit</a>
                 {% if rest.fields.reservation_link %}
-                  <a href="{{rest.fields.reservation_link}}" class='more-info'>Reserve</a>
+                  <a href="{{rest.fields.reservation_link}}" target="_blank" class='more-info'>Reserve</a>
                 {% else %}
                   <a class='more-info coming-soon'>¡Coming soon!</a>
                 {% endif %}
