header height removal

--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -1,7 +1,7 @@
 .single-blog .single-blog-header-content{
   display: flex;
   // margin-bottom: 50px;
-  height: calc(100vh - 106px);
+  // height: calc(100vh - 106px);
   // overflow: scroll;
   // -webkit-overflow-scrolling: touch;
   @media (max-width: 985px){
